Falta JSON SERVER

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
     "ESTADO": "STATUS",
     "ESPECIE": "SPECIES",
     "TIPO": "TYPE",
-    "GENERO": "GENDER"
+    "GENERO": "GENDER",
+    "Bienvenid@": "Welcome"
   }
 }
