--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -11,6 +11,7 @@
     "ESTADO": "ESTADO",
     "ESPECIE": "ESPECIE",
     "TIPO": "TIPO",
-    "GENERO": "GÉNERO"
+    "GENERO": "GÉNERO",
+    "Bienvenid@": "Bienvenid@"
   }
 }
